<resources>
    <string name="mainMenuTitle">BLIND\nNAVI</string>
    <string name="routeGuideBT">경로 안내</string>
    <string name="btConnect">블루투스 연결</string>
    <string name="setting">환경 설정</string>
    <string name="exit">종료</string>
    <string name="destinationSelectTitle">목적지 선택</string>
    <string name="selectDestination">목적지 안내</string>
    <string name="nextDestinationBT">다음 목적지</string>
    <string name="toMain">메인으로</string>
    <string name="findDestination">목적지 검색</string>
    <string name="inquiry">문의사항</string>
    <string name="usage">사용법</string>
    <string name="ttsSpeed">TTS 속도</string>
    <string name="saveTTSSpeed">저장</string>
    <string name="searchBTDevice">블루투스 장치 검색</string>
    <string name="no">아니오</string>
    <string name="yes">예</string>
    <string name="moving">이동 중</string>
    <string name="nearLocation">근처 위치</string>
    <string name="cancelGuide">안내 취소</string>
    <string name="checkTTSSpeed">TTS 속도 확인</string>
    <string name="arriveDestination">목적지\n도착</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>