<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".ui.fragment.setting.SettingMainFragment">

    <Button
        android:id="@+id/toTtsSpeedBT"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="15dp"
        android:background="@drawable/rectangle_button_skyblue_navy"
        android:fontFamily="@font/bold"
        android:text="@string/ttsSpeed"
        android:textColor="@color/navy"
        android:textSize="70sp" />

    <Button
        android:id="@+id/toUsageBT"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="15dp"
        android:background="@drawable/rectangle_button_skyblue_navy"
        android:fontFamily="@font/bold"
        android:text="@string/usage"
        android:textColor="@color/navy"
        android:textSize="70sp" />

    <Button
        android:id="@+id/toInquiryBT"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="15dp"
        android:background="@drawable/rectangle_button_skyblue_navy"
        android:fontFamily="@font/bold"
        android:text="@string/inquiry"
        android:textColor="@color/navy"
        android:textSize="70sp" />

    <Button
        android:id="@+id/settingToMainBT"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="15dp"
        android:background="@drawable/rectangle_button_skyblue_red"
        android:fontFamily="@font/bold"
        android:text="@string/toMain"
        android:textColor="@color/red"
        android:textSize="70sp" />
</LinearLayout>