<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".activity.navigation.DestinationSelectActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="94dp"
            android:layout_height="match_parent"
            android:src="@drawable/capstone_icon" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/extrabold"
            android:text="@string/destinationSelectTitle"
            android:textColor="@color/yellow"
            android:textSize="60sp" />
    </LinearLayout>

    <!-- 목적지 입력 -->
    <EditText
        android:id="@+id/inputDestination"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:hint="주소를 입력하시오."

        android:backgroundTint="@color/white"
        android:ems="10"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:inputType="text"/>

    <!-- 목적지 검색 -->
    <Button
        android:id="@+id/findDestinationBT"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_button_yellow_darkgreen"
        android:fontFamily="@font/bold"
        android:textColor="@color/darkgreen"
        android:textSize="60sp"
        android:text="@string/findDestination" />

    <!-- 목적지 안내 -->
    <Button
        android:id="@+id/selectDestinationBT"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_button_yellow_red"
        android:fontFamily="@font/bold"
        android:textColor="@color/red"
        android:textSize="60sp"
        android:text="@string/selectDestination" />

    <!-- 다음 목적지 -->
    <Button
        android:id="@+id/nextDestinationBT"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_button_yellow_navy"
        android:fontFamily="@font/bold"
        android:textColor="@color/navy"
        android:textSize="60sp"
        android:text="@string/nextDestinationBT" />

    <!-- 메인으로 -->
    <Button
        android:id="@+id/selectDestToMainBT"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_button"
        android:fontFamily="@font/bold"
        android:textColor="#000000"
        android:textSize="60sp"
        android:text="@string/toMain" />
</LinearLayout>