<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.bluetooth.BluetoothConnectActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/extrabold"
            android:text="@string/btConnect"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="60sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center_horizontal"
        android:src="@drawable/capstone_icon" />

    <Button
        android:id="@+id/searchBTDeviceBT"
        android:background="@drawable/rectangle_button_yellow_darkgreen"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/bold"
        android:textColor="@color/darkgreen"
        android:textSize="40sp"
        android:text="@string/searchBTDevice" />

    <Button
        android:id="@+id/btDeviceYesBT"
        android:background="@drawable/rectangle_button_yellow_navy"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/bold"
        android:textColor="@color/navy"
        android:textSize="40sp"
        android:text="@string/yes" />

    <Button
        android:id="@+id/btDeviceNoBT"
        android:background="@drawable/rectangle_button_yellow_red"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/bold"
        android:textColor="@color/red"
        android:textSize="40sp"
        android:text="@string/no" />
</LinearLayout>