<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".activity.navigation.NavigationActivity">


    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:textSize="80sp"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:text="@string/moving" />

    <ImageView
        android:layout_width="412dp"
        android:layout_height="320dp"
        android:gravity="center_horizontal"
        android:src="@drawable/capstone_icon_pink" />

    <Button
        android:id="@+id/nearLocationNameBT"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="15dp"
        android:background="@drawable/rectangle_button_pink_darkgreen"
        android:fontFamily="@font/bold"
        android:textColor="@color/darkgreen"
        android:textSize="70sp"
        android:text="@string/nearLocation"/>

    <Button
        android:id="@+id/stopGuideBT"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="15dp"
        android:background="@drawable/rectangle_button_pink_navy"
        android:fontFamily="@font/bold"
        android:textColor="@color/navy"
        android:textSize="70sp"
        android:text="@string/cancelGuide" />

</LinearLayout>