<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".ui.activity.MainMenuActivity">

    <!--Main Title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:src="@drawable/capstone_icon" />

        <TextView
            android:id="@+id/mainMenuTitleTV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:text="@string/mainMenuTitle"
            android:textColor="@color/yellow"
            android:textSize="60dp" />
    </LinearLayout>

    <!-- 경로 안내, 블루투스 연결-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- 경로 안내 -->
        <Button
            android:id="@+id/routeGuideBT"
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/rectangle_button"
            android:fontFamily="@font/extrabold"
            android:text="@string/routeGuideBT"
            android:textColor="@color/darkgreen"
            android:textSize="70dp" />

        <!-- 블루투스 연결-->
        <Button
            android:id="@+id/btConnectBT"
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/rectangle_button"
            android:fontFamily="@font/extrabold"
            android:text="@string/btConnect"
            android:textColor="@color/red"
            android:textSize="45dp" />
    </LinearLayout>

    <!-- 환경 설정, 종료-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- 환경설정 (아직은 비활성화) -->
        <Button
            android:id="@+id/settingBT"
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/rectangle_button"
            android:fontFamily="@font/extrabold"
            android:text="@string/setting"
            android:textColor="@color/navy"
            android:textSize="70dp" />

        <!-- 종료 -->
        <Button
            android:id="@+id/exitBT"
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/rectangle_button"
            android:fontFamily="@font/extrabold"
            android:text="@string/exit"
            android:textColor="@color/black"
            android:textSize="85dp" />
    </LinearLayout>
</LinearLayout>
