<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.setting.TTSSettingActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/extrabold"
            android:textSize="80sp"
            android:textColor="@color/yellow"
            android:textAlignment="center"
            android:text="@string/ttsSpeed" />
    </LinearLayout>

    <LinearLayout
        android:paddingBottom="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- TTS 속도 조절 Seekbar -->
        <!-- 참고 URL: https://stickode.tistory.com/74 -->
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="259dp"
            android:max="20"
            android:progress="10"
            android:progressDrawable="@drawable/tts_seekbar_bar"
            android:thumb="@drawable/tts_seekbar_thumb" />

    </LinearLayout>




    <Button
        android:id="@+id/testTTSBT"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_button_yellow_darkgreen"
        android:fontFamily="@font/bold"
        android:textColor="@color/darkgreen"
        android:textSize="60sp"
        android:text="@string/checkTTSSpeed" />

    <Button
        android:id="@+id/saveTTSBT"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_button_yellow_navy"
        android:fontFamily="@font/bold"
        android:textColor="@color/navy"
        android:textSize="60sp"
        android:text="@string/saveTTSSpeed" />

    <Button
        android:id="@+id/ttsSpeedToMainBT"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_button"
        android:fontFamily="@font/bold"
        android:text="@string/toMain"
        android:textColor="@color/black"
        android:textSize="60sp" />

</LinearLayout>