<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".ui.fragment.setting.TtsSettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/extrabold"
            android:text="@string/ttsSpeed"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="70dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/ttsSpeedUp"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/rectangle_button_yellow_red"
            android:fontFamily="@font/bold"
            android:text="▲"
            android:textColor="@color/red"
            android:textSize="90dp" />

        <Button
            android:id="@+id/ttsSpeedDown"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/rectangle_button_yellow_navy"
            android:fontFamily="@font/bold"
            android:text="▼"
            android:textColor="@color/navy"
            android:textSize="90dp" />
    </LinearLayout>

    <Button
        android:id="@+id/testTTSBT"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_button_yellow_darkgreen"
        android:fontFamily="@font/bold"
        android:text="@string/checkTTSSpeed"
        android:textColor="@color/darkgreen"
        android:textSize="50sp" />

    <Button
        android:id="@+id/saveTTSBT"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_button_yellow_navy"
        android:fontFamily="@font/bold"
        android:text="@string/saveTTSSpeed"
        android:textColor="@color/navy"
        android:textSize="60sp" />

    <Button
        android:id="@+id/ttsSpeedToMainBT"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_button"
        android:fontFamily="@font/bold"
        android:text="@string/toMain"
        android:textColor="@color/black"
        android:textSize="60sp" />

</LinearLayout>